# Outfitter-Final

outfitter_ai/: .gitignore  ai_filtering_analysis_20251006_184312.json  ai_filtering_analysis_20251006_184619.json  ai_filtering_analysis_20251006_184620.json  ai_filtering_analysis_20251006_192305.json  ai_filtering_analysis_20251006_192307.json  ai_filtering_analysis_20251006_192439.json  ai_filtering_analysis_20251006_192441.json  ai_filtering_analysis_20251007_110216.json  ai_filtering_analysis_20251007_110219.json  ai_filtering_analysis_20251007_114058.json  ai_filtering_analysis_20251007_114101.json  ai_filtering_analysis_20251007_120159.json  ai_filtering_analysis_20251007_120234.json  ai_filtering_analysis_20251007_120339.json  ai_filtering_analysis_20251007_120340.json  ai_filtering_analysis_20251007_150714.json  ai_filtering_analysis_20251007_150715.json  ai_filtering_analysis_20251007_151208.json  ai_filtering_analysis_20251007_151209.json  ai_filtering_analysis_20251007_151903.json  ai_filtering_analysis_20251007_151905.json  ai_filtering_analysis_20251007_152644.json  ai_filtering_analysis_20251007_152645.json  ai_filtering_analysis_20251007_154403.json  ai_filtering_analysis_20251007_154408.json  ai_filtering_analysis_20251007_154832.json  ai_filtering_analysis_20251007_154833.json  ai_filtering_analysis_20251007_155013.json  ai_filtering_analysis_20251007_155016.json  ai_filtering_analysis_20251007_155042.json  ai_filtering_analysis_20251007_155046.json  ai_filtering_analysis_20251007_155413.json  ai_filtering_analysis_20251007_155415.json  ai_filtering_analysis_20251007_155536.json  ai_filtering_analysis_20251007_155538.json  ai_filtering_analysis_20251007_155646.json  ai_filtering_analysis_20251007_155647.json  ai_filtering_analysis_20251007_155718.json  ai_filtering_analysis_20251007_155742.json  (+207 more)
outfitter_ai/agents/: intent_classifier.py  state.py
(+54 files in other folders)
