[project]
name = "outfitter-ai"
version = "0.1.0"
dependencies = [
    "langchain==0.1.0",
    "langchain-core==0.1.10",
    "langchain-openai==0.0.2",
    "langgraph==0.0.20",
    "openai==1.7.2",
    "pydantic==2.5.3",
    "playwright==1.48.0",
    "beautifulsoup4==4.12.3",
    "lxml==4.9.3",
    "gradio==4.13.0",
    "httpx==0.26.0",
    "aiohttp==3.9.1",
    "python-dotenv==1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]